--- a/style.css
+++ b/style.css
@@ -1,174 +1,210 @@
 /* Global settings */
+* {
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
 
 body {
-font-style: "Lato";
+  font-style: "Lato";
+  background-image: url("pink_blue.PNG");
+  background-repeat: no-repeat;
+
 }
 
 h1 {
-font-size: 4em;
+  font-size: 4em;
 }
 
 a:link {
-  text-decoration: none;
+text-decoration: none;
+color: white;
 }
 
-ul  {
-list-style: none;
+a:visited {
+color: white;
 }
+
+ul {
+  list-style: none;
+}
+
+
 
 img {
--webkit-border-radius: 50%;
--moz-border-radius: 50%;
-border-radius: 50%;
-height: 100px;
-width: 90px;
+  -webkit-border-radius: 1px 2px 3px 4px;
+  -moz-border-radius: 1px 2px 3px 4px;
+  border-radius: 1px 2px 3px 4px;
+  height: 12vh;
+  width: 10vh;
+  float: left;
+
 }
 
 /* Classes */
-
 .container {
-display: grid;
-justify-content: center;
-grid-template-columns: 75vh;
-grid-template-rows: 25vh 5vh 45vh 20vh;
-grid-template-areas:
-"hd"
-"nb"
-"ct"
-"ft";
-grid-gap: 5vh;
-padding: 1%;
+  display: grid;
+  justify-content: center;
+  grid-template-columns: 75vh;
+  grid-template-rows: 25vh 5vh 45vh 20vh;
+  grid-template-areas:
+    "hd"
+    "nb"
+    "ct"
+    "ft";
+  grid-gap: 3.5vh;
+  padding: 2%;
 }
 
 .nestedCard {
-display: grid;
-grid-template-columns: 50% 50%;
-grid-template-areas:
-"one two";
-border-top: 1px solid #999999;
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-areas:
+    "one two";
+  border-top: 4px solid #ffffff;
 }
 
 .authorbox {
-width: 30vw;
-height:   20vh;
-padding-top: 10%;
-padding-left: 3%;
+  width: 30vw;
+  height: 20vh;
+  padding-top: 10%;
+  padding-left: 6%;
+  margin: 5%;
+
 }
 
 .title {
-font-size: 1.6em;
+  font-size: 1.6em;
+  text-transform: capitalize;
+  color: white;
 }
 
 .author {
-font-size: 0.8em;
-color: #777777;
-
+  font-size: 0.8em;
+  color: white;
+  text-transform: uppercase;
 }
 
 .header {
-grid-area: hd;
-background: #cc0000;
-color: white;
-padding-top: 5%;
-text-align: center;
+  grid-area: hd;
+  padding-top: 5%;
+  text-align: center;
+  text-transform: uppercase;
+  color: white;
+  border: 3px solid white;
 }
 
 .navbar {
-grid-area: nb;
-text-decoration: none;
+  grid-area: nb;
+  text-decoration: none;
 }
 
 .navbar ul {
-display: flex;
-list-style: none;
-flex-direction: row;
-font-size: 1.5em;
+  display: flex;
+  list-style: none;
+  flex-direction: row;
+  font-size: 1.5em;
+
 }
 
 .navbar li {
-padding: 3%;
+  padding: 3%;
 
+}
+
+.info {
+display: grid;
+grid-template-columns: 50% 50%;
+grid-area: "three four";
+
+}
+
+.social {
+display: flex;
+flex-direction: row;
+}
+
+.social img {
+width: 10%;
+height: 10%;
+border: none;
+padding: 2px;
+margin: 2px;
 }
 
 .content {
-grid-area: ct;
-border-top: 1px solid #999999;
-color: black;
-font-size: 1.2em;
-padding: 3%;
-
-
+  grid-area: ct;
+  border-top: 4px solid #ffffff;
+  color: white;
+  font-size: 1.2em;
+  padding: 3%;
 }
 
 .footer {
-grid-area: ft;
-border-top: 1px solid #999999;
-color: #999999;
-text-align: center;
-padding: 5%;
+  display: flex;
+  flex-direction: row;
+  grid-area: ft;
+  border-top: 8px solid #ffffff;
+  color: white;
+  justify-content: center;
+  padding: 5%;
 }
+
+
+/* CSS */
 
 
 
 /* CSS */
-.button_red {
-  background: #FF4742;
-  border: 1px solid #FF4742;
-  border-radius: 6px;
-  box-shadow: rgba(0, 0, 0, 0.1) 1px 2px 4px;
+.button-80 {
+  background: #fff;
+  backface-visibility: hidden;
+  border-radius: .375rem;
+  border-style: solid;
+  border-width: .125rem;
   box-sizing: border-box;
-  color: #FFFFFF;
+  color: #212121;
   cursor: pointer;
   display: inline-block;
-  font-family: nunito,roboto,proxima-nova,"proxima nova",sans-serif;
-  font-size: 16px;
-  font-weight: 800;
-  line-height: 16px;
-  min-height: 40px;
-  outline: 0;
-  padding: 12px 14px;
-  text-align: center;
-  text-rendering: geometricprecision;
-  text-transform: none;
+  font-family: Circular,Helvetica,sans-serif;
+  font-size: 1.125rem;
+  font-weight: 700;
+  letter-spacing: -.01em;
+  line-height: 1.3;
+  padding: .875rem 1.125rem;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transform: translateZ(0) scale(1);
+  transition: transform .2s;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
-  vertical-align: middle;
   float: right;
-
 }
 
-.button_red:hover,
-.button_red:active {
-  background-color: initial;
-  background-position: 0 0;
-  color: #FF4742;
+.button-80:focus {
+  outline: 0 solid transparent;
 }
 
-.button_red:active {
-  opacity: .5;
-}
 
-.button_red span {
-text-decoration: none;
-  
-}
 
 /* ID's */
 
+
 #one {
-grid-area: one;
-text-align: center;
+  grid-area: one;
 }
 
 #two {
-grid-area: two;
+  grid-area: two;
 }
 
 #three {
-grid-area: three;
+  grid-area: three;
+  display: flex;
+  flex-direction: column;
 }
 
 #four {
-grid-area: four;
+  grid-area: four;
 }
