--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   font-style: "Lato";
-  background-image: url("pink_blue.PNG");
+  background-image: url("pink_blue.png");
   background-repeat: no-repeat;
 
 }
