--- a/style.css
+++ b/style.css
@@ -1,14 +1,8 @@
-/* Global settings */
-@media screen and (max-width: 768px) {
-  .nestedCard {
-    display: grid;
-    grid-template-columns: 100%;
-    grid-template-areas:
-      "one";
-    border-top: 4px solid #ffffff;
-  }
-}
+/* Imports */
+@import "media.css";
+@import "buttons.css";
 
+/* Global settings */
 * {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
@@ -30,7 +24,7 @@ a:link {
 }
 
 a:visited {
-  color: white;
+  color: #0000bb;
 }
 
 ul {
@@ -44,6 +38,7 @@ img {
   height: 12vh;
   width: 10vh;
   float: left;
+  margin-bottom: 0;
 }
 
 /* Classes */
@@ -51,7 +46,7 @@ img {
   display: grid;
   justify-content: center;
   grid-template-columns: 75vh;
-  grid-template-rows: 25vh 5vh 45vh 20vh;
+  grid-template-rows: 25vh 5vh 50vh 20vh;
   grid-template-areas:
     "hd"
     "nb"
@@ -63,7 +58,7 @@ img {
 
 .nestedCard {
   display: grid;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 15vw 15vw;
   grid-template-areas:
     "one two";
   border-top: 4px solid #ffffff;
@@ -77,16 +72,25 @@ img {
   margin: 5%;
 }
 
+.line {
+  font-style: italic;
+  font-size: 13px;
+  color: white;
+}
+
 .title {
   font-size: 1.6em;
   text-transform: capitalize;
   color: white;
+  font-weight: bold;
+  text-decoration: underline;
 }
 
 .author {
   font-size: 0.8em;
   color: white;
   text-transform: uppercase;
+  font-style: italic;
 }
 
 .header {
@@ -135,7 +139,7 @@ img {
 
 .content {
   grid-area: ct;
-  border-top: 4px solid #ffffff;
+  border: 4px solid #ffffff;
   color: white;
   font-size: 1.2em;
   padding: 3%;
@@ -145,43 +149,9 @@ img {
   display: flex;
   flex-direction: row;
   grid-area: ft;
-  border-top: 8px solid #ffffff;
-  color: white;
+  color: #eeeeee;
   justify-content: center;
   padding: 5%;
-}
-
-/* CSS */
-/* CSS */
-.button-80 {
-  background: #fff;
-  backface-visibility: hidden;
-  border-radius: .375rem;
-  border-style: solid;
-  border-width: .125rem;
-  box-sizing: border-box;
-  color: #212121;
-  cursor: pointer;
-  display: inline-block;
-  font-family: Circular, Helvetica, sans-serif;
-  font-size: 1.125rem;
-  font-weight: 700;
-  letter-spacing: -.01em;
-  line-height: 1.3;
-  padding: .875rem 1.125rem;
-  position: relative;
-  text-align: left;
-  text-decoration: none;
-  transform: translateZ(0) scale(1);
-  transition: transform .2s;
-  user-select: none;
-  -webkit-user-select: none;
-  touch-action: manipulation;
-  float: right;
-}
-
-.button-80:focus {
-  outline: 0 solid transparent;
 }
 
 /* ID's */
