--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,4 @@
-@media screen and (max-width: 568px) {
+@media screen and (max-width: 717px) {
 
 /* Special thanks to https://getcssscan.com/css-buttons-examples for button styling */
 
@@ -26,128 +26,124 @@
     user-select: none;
     -webkit-user-select: none;
     touch-action: manipulation;
-    float: left;
-  }
-
-  .container {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 90vh;
-    grid-template-rows: 25vh 5vh 50vh 20vh;
-    grid-template-areas:
-      "hd"
-      "nb"
-      "ct"
-      "ft";
-    grid-gap: 3.5vh;
-    padding: 2%;
-  }
-
-
-  .header {
-    grid-area: hd;
-    padding-top: 5%;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
-    border: 3px solid white;
-    width: 60%;
-  }
-
-  .footer {
-    display: flex;
-    flex-direction: row;
-    grid-area: ft;
-    color: white;
-    justify-content: center;
-    padding: 5%;
-    width: 60%;
-  }
-
-
-  .content {
-    grid-area: ct;
-    border: 4px solid #ffffff;
-    color: white;
-    width: 60%;
-    font-size: 1.2em;
-    padding: 3%;
-  }
 
 }
+    .container {
+      display: grid;
+      justify-content: center;
+      grid-template-columns: 30%;
+      grid-template-rows: 20vh 5% 60vh 10%;
+      grid-template-areas:
+        "hd"
+        "nb"
+        "ct"
+        "ft";
+      grid-gap: 3.5vh;
+      padding: 2%;
+    }
 
-@media screen and (max-width: 368px) {
+    .nestedCard {
+      display: grid;
+      grid-template-columns: 15vw 15vw;
+      grid-template-areas:
+        "one two";
+      border-top: 4px solid #ffffff;
+    }
 
-  .button-80 {
-    background: #fff;
-    backface-visibility: hidden;
-    border-radius: .375rem;
-    border-style: solid;
-    border-width: .125rem;
-    box-sizing: border-box;
-    color: #212121;
-    cursor: pointer;
-    display: inline-block;
-    font-family: Circular, Helvetica, sans-serif;
-    font-size: 1.125rem;
-    font-weight: 700;
-    letter-spacing: -.01em;
-    line-height: 1.3;
-    padding: .875rem 1.125rem;
-    position: relative;
-    text-align: left;
-    text-decoration: none;
-    transform: translateZ(0) scale(1);
-    transition: transform .2s;
-    user-select: none;
-    -webkit-user-select: none;
-    touch-action: manipulation;
-    float: left;
-  }
+    .authorbox {
+      width: 30vw;
+      height: 20vh;
+      padding-top: 5%;
+      padding-left: 3%;
+      margin-left: 5%;
+    }
 
-  .container {
-    display: grid;
-    justify-content: center;
-    grid-template-columns: 90vh;
-    grid-template-rows: 25vh 5vh 50vh 20vh;
-    grid-template-areas:
-      "hd"
-      "nb"
-      "ct"
-      "ft";
-    grid-gap: 3.5vh;
-    padding: 2%;
-  }
+    .line {
+      font-style: italic;
+      font-size: 6px;
+      color: white;
+    }
 
+    .title {
+      font-size: 1.6em;
+      text-transform: capitalize;
+      color: white;
+      font-weight: bold;
+      text-decoration: underline;
+    }
 
-  .header {
-    grid-area: hd;
-    padding-top: 5%;
-    text-align: center;
-    text-transform: uppercase;
-    color: white;
-    border: 3px solid white;
-    width: 40%;
-  }
+    .author {
+      font-size: 0.8em;
+      color: white;
+      text-transform: uppercase;
+      font-style: italic;
+    }
 
-  .footer {
-    display: flex;
-    flex-direction: row;
-    grid-area: ft;
-    color: white;
-    justify-content: center;
-    padding: 5%;
-    width: 40%;
-  }
+    .header {
+      grid-area: hd;
+      padding-top: 5%;
+      text-align: center;
+      text-transform: uppercase;
+      color: white;
+      border: 3px solid white;
+    }
 
+    .navbar {
+      grid-area: nb;
+      text-decoration: none;
+    }
 
-  .content {
-    grid-area: ct;
-    border: 4px solid #ffffff;
-    color: white;
-    width: 40%;
-    font-size: 1.2em;
-    padding: 3%;
-  }
+    .navbar ul {
+      display: flex;
+      list-style: none;
+      flex-direction: row;
+      font-size: 1.5em;
+    }
 
-}
+    .navbar li {
+      padding: 3%;
+    }
+
+    .info {
+      display: grid;
+      grid-template-columns: 50% 50%;
+      grid-area: "three four";
+    }
+
+    .image_caption {
+      margin: 0;
+      display: flex;
+      flex-direction: column;
+      font-size: 13px;
+      font-style: italic;
+    }
+
+    .social {
+      display: flex;
+      flex-direction: row;
+    }
+
+    .social img {
+      width: 10%;
+      height: 10%;
+      border: none;
+      padding: 2px;
+      margin: 2px;
+    }
+
+    .content {
+      grid-area: ct;
+      border: 4px solid #ffffff;
+      color: white;
+      font-size: 1.2em;
+      padding: 3%;
+    }
+
+    .footer {
+      display: flex;
+      flex-direction: row;
+      grid-area: ft;
+      color: #eeeeee;
+      justify-content: center;
+      padding: 5%;
+    }
