--- a/css/media.css
+++ b/css/media.css
@@ -1,5 +1,12 @@
 @media screen and (max-width: 717px) {
 
+  body {
+    font-style: "Lato";
+    background-image: url("../assets/pink_blue.png");
+    background-repeat: no-repeat;
+    font-size: 1px;
+  }
+
 /* Special thanks to https://getcssscan.com/css-buttons-examples for button styling */
 
   .button-80 {
@@ -31,7 +38,7 @@
     .container {
       display: grid;
       justify-content: center;
-      grid-template-columns: 30%;
+      grid-template-columns: 45%;
       grid-template-rows: 20vh 5% 60vh 10%;
       grid-template-areas:
         "hd"
@@ -44,15 +51,15 @@
 
     .nestedCard {
       display: grid;
-      grid-template-columns: 15vw 15vw;
+      grid-template-columns: 20vw 20vw;
       grid-template-areas:
         "one two";
       border-top: 4px solid #ffffff;
     }
 
     .authorbox {
-      width: 30vw;
-      height: 20vh;
+      width: 35vw;
+      height: 10vh;
       padding-top: 5%;
       padding-left: 3%;
       margin-left: 5%;
@@ -60,12 +67,12 @@
 
     .line {
       font-style: italic;
-      font-size: 6px;
+      font-size: 3px;
       color: white;
     }
 
     .title {
-      font-size: 1.6em;
+      font-size: 0.2em;
       text-transform: capitalize;
       color: white;
       font-weight: bold;
@@ -73,7 +80,7 @@
     }
 
     .author {
-      font-size: 0.8em;
+      font-size: 0.1em;
       color: white;
       text-transform: uppercase;
       font-style: italic;
@@ -81,12 +88,13 @@
 
     .header {
       grid-area: hd;
-      padding-top: 5%;
+      padding-top: 3%;
       text-align: center;
       text-transform: uppercase;
       color: white;
       border: 3px solid white;
     }
+
 
     .navbar {
       grid-area: nb;
@@ -97,7 +105,6 @@
       display: flex;
       list-style: none;
       flex-direction: row;
-      font-size: 1.5em;
     }
 
     .navbar li {
@@ -114,7 +121,7 @@
       margin: 0;
       display: flex;
       flex-direction: column;
-      font-size: 13px;
+      font-size: 6px;
       font-style: italic;
     }
 
@@ -135,8 +142,10 @@
       grid-area: ct;
       border: 4px solid #ffffff;
       color: white;
-      font-size: 1.2em;
-      padding: 3%;
+      font-size: 0.5em;
+      padding-right: 4%;
+      display: flex;
+      flex-direction: column;
     }
 
     .footer {
