--- a/css/media.css
+++ b/css/media.css
@@ -149,3 +149,156 @@
       justify-content: center;
       padding: 5%;
     }
+
+    @media screen and (max-width: 317px) {
+
+    /* Special thanks to https://getcssscan.com/css-buttons-examples for button styling */
+
+      .button-80 {
+        background: #fff;
+        backface-visibility: hidden;
+        border-radius: .375rem;
+        border-style: solid;
+        border-width: .125rem;
+        box-sizing: border-box;
+        color: #212121;
+        cursor: pointer;
+        display: inline-block;
+        font-family: Circular, Helvetica, sans-serif;
+        font-size: 1.125rem;
+        font-weight: 700;
+        letter-spacing: -.01em;
+        line-height: 1.3;
+        padding: .875rem 1.125rem;
+        position: relative;
+        text-align: left;
+        text-decoration: none;
+        transform: translateZ(0) scale(1);
+        transition: transform .2s;
+        user-select: none;
+        -webkit-user-select: none;
+        touch-action: manipulation;
+
+    }
+        .container {
+          display: grid;
+          justify-content: center;
+          grid-template-columns: 45%;
+          grid-template-rows: 20vh 5% 60vh 10%;
+          grid-template-areas:
+            "hd"
+            "nb"
+            "ct"
+            "ft";
+          grid-gap: 3.5vh;
+          padding: 2%;
+        }
+
+        .nestedCard {
+          display: grid;
+          grid-template-columns: 20vw 20vw;
+          grid-template-areas:
+            "one two";
+          border-top: 4px solid #ffffff;
+        }
+
+        .authorbox {
+          width: 35vw;
+          height: 10vh;
+          padding-top: 5%;
+          padding-left: 3%;
+          margin-left: 5%;
+        }
+
+        .line {
+          font-style: italic;
+          font-size: 3px;
+          color: white;
+        }
+
+        .title {
+          font-size: 0.1em;
+          text-transform: capitalize;
+          color: white;
+          font-weight: bold;
+          text-decoration: underline;
+        }
+
+        .author {
+          font-size: 0.1em;
+          color: white;
+          text-transform: uppercase;
+          font-style: italic;
+        }
+
+        .header {
+          grid-area: hd;
+          padding-top: 3%;
+          text-align: center;
+          text-transform: uppercase;
+          color: white;
+          border: 3px solid white;
+        }
+
+
+        .navbar {
+          grid-area: nb;
+          text-decoration: none;
+          font-size: 0.5em;
+        }
+
+        .navbar ul {
+          display: flex;
+          list-style: none;
+          flex-direction: row;
+        }
+
+        .navbar li {
+          padding: 3%;
+        }
+
+        .info {
+          display: grid;
+          grid-template-columns: 50% 50%;
+          grid-area: "three four";
+        }
+
+        .image_caption {
+          margin: 0;
+          display: flex;
+          flex-direction: column;
+          font-size: 6px;
+          font-style: italic;
+        }
+
+        .social {
+          display: flex;
+          flex-direction: row;
+        }
+
+        .social img {
+          width: 10%;
+          height: 10%;
+          border: none;
+          padding: 2px;
+          margin: 2px;
+        }
+
+        .content {
+          grid-area: ct;
+          border: 4px solid #ffffff;
+          color: white;
+          font-size: 0.5em;
+          padding-right: 4%;
+          display: flex;
+          flex-direction: column;
+        }
+
+        .footer {
+          display: flex;
+          flex-direction: row;
+          grid-area: ft;
+          color: #eeeeee;
+          justify-content: center;
+          padding: 5%;
+        }
