--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,13 @@
 .container {
   display: grid;
   justify-content: center;
-  grid-template-columns: 45%;
+  grid-template-columns: 1fr 45%;
   grid-template-rows: 20vh 5% 60vh 10%;
   grid-template-areas:
-    "hd"
-    "nb"
-    "ct"
-    "ft";
+    "hd hd"
+    "nb nb"
+    "ct ct"
+    "ft ft";
   grid-gap: 3.5vh;
   padding: 2%;
 }
@@ -56,7 +56,7 @@
   text-align: center;
   text-transform: uppercase;
   color: white;
-  border: 3px solid white;
+
 }
 
 .navbar {
@@ -79,6 +79,8 @@
   display: grid;
   grid-template-columns: 50% 50%;
   grid-area: "three four";
+  border-top: 4px solid #ffffff;
+  padding-top: 2%;
 }
 
 .image_caption {
@@ -104,7 +106,6 @@
 
 .content {
   grid-area: ct;
-  border: 4px solid #ffffff;
   color: white;
   font-size: 1.2em;
   padding: 3%;
