--- a/css/media.css
+++ b/css/media.css
@@ -34,9 +34,9 @@
       grid-template-columns: 45%;
       grid-template-rows: 20vh 5% 60vh 10%;
       grid-template-areas:
-        "hd"
-        "nb"
-        "ct"
+        "hd hd"
+        "nb nb"
+        "ct ct"
         "ft";
       grid-gap: 3.5vh;
       padding: 2%;
@@ -47,7 +47,7 @@
       grid-template-columns: 20vw 20vw;
       grid-template-areas:
         "one two";
-      border-top: 4px solid #ffffff;
+border-top: 4px solid #ffffff;
     }
 
     .authorbox {
@@ -85,7 +85,7 @@
       text-align: center;
       text-transform: uppercase;
       color: white;
-      border: 3px solid white;
+
     }
 
 
@@ -108,6 +108,7 @@
       display: grid;
       grid-template-columns: 50% 50%;
       grid-area: "three four";
+      border-top: 4px solid #ffffff;
     }
 
     .image_caption {
@@ -133,7 +134,7 @@
 
     .content {
       grid-area: ct;
-      border: 4px solid #ffffff;
+
       color: white;
       font-size: 0.5em;
       padding-right: 4%;
@@ -150,7 +151,7 @@
       padding: 5%;
     }
 
-    @media screen and (max-width: 317px) {
+    @media screen and (max-width: 344px) {
 
     /* Special thanks to https://getcssscan.com/css-buttons-examples for button styling */
 
@@ -186,9 +187,9 @@
           grid-template-columns: 45%;
           grid-template-rows: 20vh 5% 60vh 10%;
           grid-template-areas:
-            "hd"
-            "nb"
-            "ct"
+            "hd hd"
+            "nb nb"
+            "ct ct"
             "ft";
           grid-gap: 3.5vh;
           padding: 2%;
@@ -199,7 +200,7 @@
           grid-template-columns: 20vw 20vw;
           grid-template-areas:
             "one two";
-          border-top: 4px solid #ffffff;
+border-top: 4px solid #ffffff;
         }
 
         .authorbox {
@@ -237,7 +238,7 @@
           text-align: center;
           text-transform: uppercase;
           color: white;
-          border: 3px solid white;
+
         }
 
 
@@ -250,7 +251,7 @@
         .navbar ul {
           display: flex;
           list-style: none;
-          flex-direction: row;
+          flex-direction: column;
         }
 
         .navbar li {
@@ -261,6 +262,7 @@
           display: grid;
           grid-template-columns: 50% 50%;
           grid-area: "three four";
+          border-top: 4px solid #ffffff;
         }
 
         .image_caption {
@@ -286,7 +288,7 @@
 
         .content {
           grid-area: ct;
-          border: 4px solid #ffffff;
+
           color: white;
           font-size: 0.5em;
           padding-right: 4%;
