--- a/css/media.css
+++ b/css/media.css
@@ -252,6 +252,7 @@ border-top: 4px solid #ffffff;
           display: flex;
           list-style: none;
           flex-direction: column;
+          margin-bottom: 2%;
         }
 
         .navbar li {
