--- a/css/media.css
+++ b/css/media.css
@@ -65,7 +65,7 @@ border-top: 4px solid #ffffff;
     }
 
     .title {
-      font-size: 0.2em;
+      font-size: 9px;
       text-transform: capitalize;
       color: white;
       font-weight: bold;
@@ -73,7 +73,7 @@ border-top: 4px solid #ffffff;
     }
 
     .author {
-      font-size: 0.1em;
+      font-size: 9px;
       color: white;
       text-transform: uppercase;
       font-style: italic;
@@ -218,7 +218,7 @@ border-top: 4px solid #ffffff;
         }
 
         .title {
-          font-size: 0.1em;
+          font-size: 7px;
           text-transform: capitalize;
           color: white;
           font-weight: bold;
@@ -226,7 +226,7 @@ border-top: 4px solid #ffffff;
         }
 
         .author {
-          font-size: 0.1em;
+          font-size: 7px;
           color: white;
           text-transform: uppercase;
           font-style: italic;
@@ -245,7 +245,7 @@ border-top: 4px solid #ffffff;
         .navbar {
           grid-area: nb;
           text-decoration: none;
-          font-size: 0.3em;
+          font-size: 0.5em;
         }
 
         .navbar ul {
@@ -291,7 +291,7 @@ border-top: 4px solid #ffffff;
           grid-area: ct;
 
           color: white;
-          font-size: 0.5em;
+          font-size: 10px;
           padding-right: 4%;
           display: flex;
           flex-direction: column;
